<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.Yomicer</groupId>
    <artifactId>MagicExpansion</artifactId>
    <version>UNOFFICIAL</version>
    <packaging>jar</packaging>

    <name>MagicExpansion</name>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>${project.name} v${project.version}</finalName>
        <defaultGoal>clean package</defaultGoal>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>

        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>bg-repo</id>
            <url>https://repo.bg-software.com/repository/api/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Core -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.SlimefunGuguProject</groupId>
            <artifactId>Slimefun4</artifactId>
            <version>b39097e015</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <!-- Chinese localization library -->
        <dependency>
            <groupId>net.guizhanss</groupId>
            <artifactId>GuizhanLibPlugin</artifactId>
            <version>1.7.6</version>
            <scope>provided</scope>
        </dependency>
        <!--InfinityLib-->
        <dependency>
            <groupId>com.github.SlimefunGuguProject</groupId>
            <artifactId>InfinityLib</artifactId>
            <version>1.3.10</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.jeff-media</groupId>
            <artifactId>MorePersistentDataTypes</artifactId>
            <version>2.4.0</version>
            <scope>compile</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.github.SlimefunGuguProject</groupId>-->
<!--            <artifactId>Networks</artifactId>-->
<!--            <version>1514bf728b</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->

    </dependencies>
</project>
